<resources>
    <string name="app_name">MediConnecta Carrechiquilla</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es un usuario registrado</string>
    <string name="invalid_password">COntraseña no válida</string>
    <string name="login_failed">"Ha introducido un nombre de usuario o contraseña incorrecta"</string>
    <string name="prompt_user">Usuario</string>
    <string name="desc_imag_logo_login">Imagen del logo para al activity de login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass">Contraseña</string>
    <string name="userLogin">Usuario</string>
    <string name="buttonAcceso">Acceder</string>
    <string name="content_description_end_icon_user">Icono de usuario</string>
    <string name="desc_logo_inicio">Imagen del logo para el inicio de sesión</string>
    <string name="labelAreaGeriatría">¿En que unidad de geriatría?</string>
    <string name="labelSaludMental">¿En qué área de salud mental?</string>
    <string name="seleccionar_area">Seleccione el area:</string>
    <string name="nombreYApellidosLabel">Nombre y Apellidos:</string>
    <string name="codigo_empleado_label">Código de empleado:</string>
    <string name="cargo_label">Cargo:</string>
    <string name="seleccionar_area_unidad_label">Seleccione la unidad en la que va a trabajar hoy:</string>
    <string name="seleccionar_unidad_label">Seleccione la unidad:</string>
    <string name="acceso_al_home_btn_label">Acceso al Home</string>
    <string name="content_description_foto_empleado">Foto del empleado de la sesión actual</string>
    <string name="home_item">Home</string>
    <string name="residentes_item">Residentes</string>
    <string name="parte_general_item">Parte General</string>
    <string name="cambio_unidad_item">Cambio unidad</string>
    <string name="normas_empresa_item">Normas empresa</string>
    <string name="mensajes_item">Mensajes</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="cierre_sesion_item">Cerrar sesión</string>
    <string name="unidad">Unidad Placeholder</string>
    <string name="nombreYApellidos">Nombre y apellidos Placeholder</string>
    <string name="configuracion_item">Configuración</string>
    <string name="politica_item">Política</string>
    <string name="mediconnecta_principal_item">Principal</string>
    <string name="open_nav">Abrir navegador</string>
    <string name="close_nav">Cerrar navegador</string>
    <string name="avisos">Avisos</string>
    <string name="svRecyclerViewRutinas">Contiene las rutinas diarias de los alumnos</string>
    <string name="rutinas">Rutina del día</string>
    <string name="tabVisitas">Visitas</string>
    <string name="tabSalidas">Salidas</string>
    <string name="tabFisio">Fisioterapeuta</string>
    <string name="tabCuras">Curas</string>
    <string name="tabConsultasMedicas">Consultas Médicas</string>
    <string name="content_description_foto_residente">Imagen de cada uno de los alumnos</string>
    <string name="content_description_foto_paciente_detalle">Foto del paciente en el detalle</string>
    <string name="nombrePacienteLabel">Nombre</string>
    <string name="apellidoPacienteLabel">Apellidos</string>
    <string name="dniPacienteLabel">DNI</string>
    <string name="edadPacienteLabel">Edad</string>
    <string name="FechaNacimientoPacienteLabel">Fecha nacimiento</string>
    <string name="estadoCivilPacienteLabel">Estado Civil</string>
    <string name="FechaIngresoPacienteLabel">Fecha ingreso</string>
    <string name="sexoPacienteLabel">Sexo</string>
    <string name="unidadPacienteLabel">Unidad</string>
    <string name="habitacionPacienteLabel">Habitación</string>
    <string name="lugarNacimientoPacienteLabel">Lugar de Nacimiento</string>
    <string name="seguroPacienteLabel">Seguro</string>
    <string name="cipSnsPacienteLabel">CIP SNS</string>
    <string name="numSeguridadSocialPacienteLabel">Nº Seguridad Social</string>
    <string name="general">General</string>
    <string name="contacto">Contactos</string>
    <string name="clinica">Clínica</string>
    <string name="pautas">Pautas</string>
    <string name="parte">Parte</string>
    <string name="parteCaidas">Parte Caídas</string>
    <string name="labelNombreFamiliar">Nombre</string>
    <string name="labelApellidosFamiliar">Apellidos</string>
    <string name="labelTelefono1">Teléfono 1</string>
    <string name="labelTelefono2">Teléfono 2</string>
    <string name="labelDniFamiliar">DNI</string>
    <string name="labelHistoriaClinica">Historia Clínica</string>
    <string name="datosSaludLabel">Datos de Salud</string>
    <string name="labelTratamiento">Tratamiento</string>
    <string name="labelInformes">Informes Clínicos</string>
    <string name="tipoInforme">Tipo de informe</string>
    <string name="fechaInforme">Fecha</string>
    <string name="centro">Centro</string>
    <string name="responsable">Responsable</string>
    <string name="servicioUnidadDispositivo">Servicio Unidad Dispositivo</string>
    <string name="servicioSalud">Servicio de Salud</string>
    <string name="pdf">PDF</string>
    <string name="anatomicos">Anatómicos</string>
    <string name="labelPauta">Pauta</string>
    <string name="labelNombrePauta">Pauta</string>
    <string name="labelObservacionesPauta">Observaciones</string>
    <string name="tipoPauta">Tipo Pauta</string>
    <string name="observacionesPauta">Observaciones</string>
    <string name="mañanaAnatomicos">Mañana</string>
    <string name="tardeAnatomicos">Tarde</string>
    <string name="nocheAnatomicos">Noche</string>
    <string name="seguimiento">Introducción de seguimientos</string>
    <string name="fechaHoraParte">Fecha y Hora</string>
    <string name="paciente">Paciente</string>
    <string name="descParte">Descripción</string>
    <string name="registrar">Registrar</string>
    <string name="empleado">Empleado</string>
    <string name="factoresRiesgo">Factores de riesgo</string>
    <string name="causas">Causas</string>
    <string name="circunstancias">Circunstancias</string>
    <string name="consecuencias">Consecuencias</string>
    <string name="caidaPresenciada">Caída presenciada:</string>
    <string name="avisadoFamiliares">Avisado a familiares:</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="seleccionarFechas">Seleccionar Fechas</string>
    <string name="fechaSeleccionada">Fechas seleccionadas</string>
    <string name="lugarCaida">Lugar Caída</string>
    <string name="placeholder">Placeholder</string>
    <string name="nombreNorma">Nombre norma</string>
    <string name="descripcionNorma">Descripción norma</string>
    <string name="cerrarSesion">¿Quiere cerrar sesión?</string>
    <string name="pacientes_item">Pacientes</string>
    <string name="busqueda">Introduzca su búsqueda</string>
    <string name="informesPdf">Botón que permite la visualización de los informes en pdf</string>
    <string name="partes">Partes generales</string>
    <string name="partesCaidas">Partes de caída generales</string>
    <string name="cambioUnidad">¿Quiere cambiar de unidad?</string>
    <string name="cierreSesion">¿Quiere cerrar sesión?</string>
    <string name="sinSeguro">Sin seguro</string>
    <string name="noAnatomicos">Sin anatómico</string>
    <string name="noRutinaAnatomicos">No tiene rutina de anatómicos</string>
    <string name="noPautas">No tiene pautas</string>
    <string name="noObservaciones">No tiene observaciones</string>
    <string name="datosPersonales">Datos Personales</string>
    <string name="datosContacto">Datos de contacto</string>
    <string name="datosClinicos">Datos Clínicos</string>
    <string name="pautasNuevoPaciente">Pautas</string>
    <string name="guardar">Guardar</string>
    <string name="content_description_foto_paciente_detalle_nuevo">Foto del nuevo paciente</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="ingreso">Calendario fecha ingreso</string>
    <string name="nacimientoFecha">Calendario fecha nacimiento</string>
    <string name="foto_avisos">Foto de los empleados en los avisos</string>
    <string name="nombreEmpleado">Nombre empleado</string>
    <string name="anadirUsuario">Añadir usuario</string>
    <string name="editarUsuario">Editar usuario</string>
    <string name="eliminarUsuario">Eliminar usuario</string>
    <string name="profesorAlumnoLabel">Profesor</string>
    <string name="aulaAlumnoLabel">Aula</string>
    <string name="ateAlumnoLabel">ATE</string>
    <string name="gradoDiscapacidadLabel">Grado Discapacidad</string>
    <string name="pae">PAE</string>
    <string name="seguimientoAlumno">Seguimiento</string>
    <string name="crisis">Crisis</string>
    <string name="CursoEmisionLabel">Cruso de emisión</string>
    <string name="fechaNacimientoPaeeLabel">Fecha de nacimiento</string>
    <string name="enfermeraAlumnoLabel">Enfermera</string>
    <string name="protesis">Prótesis</string>
    <string name="ortesis">Órtesis</string>
    <string name="gafas">Gafas</string>
    <string name="otros">Otros</string>
    <string name="audifonos">Audífonos</string>
    <string name="fiebreLabel">Fiebre</string>
    <string name="alergiasLabel">Alergias</string>
    <string name="diagnosticoLabel">Diagnóstico Clínico</string>
    <string name="dietasLabel">Dietas/Alimentación</string>
    <string name="medicacionLabel">Medicación</string>
    <string name="tutorLabel">Tutor</string>
    <string name="alumnos_item">Alumnos</string>
    <string name="editarPae">Editar Pae</string>
    <string name="confirmar">Confirmar</string>
    <string name="DatosImportantesLabel">Datos Importantes</string>
    <string name="barra">/</string>
    <string name="modificacion">Modificado por:</string>
    <string name="atras">Atrás</string>
    <string name="Busqueda">Búsqueda</string>
    <string name="searchbar_hint">Escriba el nombre del alumno</string>
    <string name="search">Escriba el nombre del alumno</string>
    <string name="fechaSeguimiento">Fecha</string>
    <string name="horaSeguimiento">Hora</string>
    <string name="calendario_description">Selección de fecha</string>
    <string name="hora_description">Selecciona hora</string>
    <string name="descripcionSeguimiento">Descripción</string>
    <string name="añadir">Añadir</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Edición</string>
    <string name="borradoSeguimiento">¿Quiere borrar este seguimiento?</string>
    <string name="fecha">Seleccione rango de fechas</string>
    <string name="tipo">Tipo de crisis</string>
    <string name="intensidadCrisis">Intensidad de la crisis</string>
    <string name="lugarCrisis">Lugar de la crisis</string>
    <string name="patrones">Patrones</string>
    <string name="descripcionCrisis">Descripció</string>
    <string name="descripcion">Descripción</string>
    <string name="recuperacion">Recuperación</string>
    <string name="duracion">Duración</string>
    <string name="borradoCrisis">¿Quieres borrar esta crisis?</string>
    <string name="especialistas">Especialistas</string>
</resources>