<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="TODO">
        <menu>
            <item
                android:id="@+id/home_item"
                android:icon="@drawable/home_icon"
                android:title="@string/home_item"
                android:checkable="true"/>
            <item
                android:id="@+id/residentes_item"
                android:icon="@drawable/residentes_icon"
                android:title="@string/residentes_item"
                android:checkable="true"/>
            <item
                android:id="@+id/parte_general_item"
                android:icon="@drawable/parte_icon"
                android:title="@string/parte_general_item"
                android:checkable="true"/>
            <item
                android:id="@+id/cambio_unidad_item"
                android:icon="@drawable/cambio_unidad_icon"
                android:title="@string/cambio_unidad_item"
                android:checkable="true"/>
            <item
                android:id="@+id/normas_empresa_item"
                android:icon="@drawable/normas_empresa_icon"
                android:title="@string/normas_empresa_item"
                android:checkable="true"/>
            <item
                android:id="@+id/mensajes_item"
                android:icon="@drawable/cierre_sesion_icon"
                android:title="@string/mensajes_item"
                android:checkable="true"/>
        </menu>
    </item>
</menu>