
<!-- R.layout.table_row_informe.xml -->
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvRellenaFechaCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/fechaInforme"
        android:textColor="#000000"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvRellenaPacienteCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/paciente"
        android:textColor="#000000"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvRellenaLugarCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/lugarCaida"
        android:textColor="#000000"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvRellenaFactoresRiesgo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/factoresRiesgo"
        android:textColor="#000000"
        android:textSize="16sp" />

    <!-- Columna 3: Fecha -->
    <TextView
        android:id="@+id/tvRellenaCausas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/causas"
        android:textColor="#000000"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvRellenaCircunstancias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/circunstancias"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaConsecuencias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/consecuencias"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaUnidadCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/unidadPacienteLabel"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaCaidaPresenciada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/caidaPresenciada"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaAvisoFamiliares"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/avisadoFamiliares"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaObservacionesCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/observacionesPauta"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRellenaEmpleadoVeCaida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/empleado"
        android:textColor="#000000"
        android:textSize="16sp" />

</TableRow>