<!-- R.layout.table_row_header.xml -->
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/seed">

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/fechaInforme"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/paciente"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/lugarCaida"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Columna 3: Encabezado para "Fecha" -->
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/factoresRiesgo"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Columna 3: Encabezado para "Fecha" -->
    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/causas"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Columna 3: Encabezado para "Fecha" -->
    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/circunstancias"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/consecuencias"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/unidadPacienteLabel"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/caidaPresenciada"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/avisadoFamiliares"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/observacionesPauta"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/empleado"
        android:textColor="@color/md_theme_black"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <!-- Agrega más encabezados de columna según sea necesario -->
</TableRow>

